# IMSystem

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md
admin/: CMakeLists.txt  main.cpp
admin/src/: admin_server.cpp  admin_server.h  api_handler.cpp  api_handler.h
admin/test/: admin_test.cpp
common/: CMakeLists.txt
common/src/config/: config_manager.cpp  config_manager.h
common/src/db/: mongo_pool.cpp  mongo_pool.h  mysql_pool.cpp  mysql_pool.h
common/src/logger/: logger.cpp  logger.h
common/src/mq/: rabbitmq_client.cpp  rabbitmq_client.h
common/src/redis/: redis_client.cpp  redis_client.h
common/src/utils/: retry.h  string_utils.cpp  string_utils.h  time_utils.cpp  time_utils.h
deploy/docker/: Dockerfile
deploy/docker-compose/: docker-compose.yaml
deploy/docker-compose/config/: init_db.sql
deploy/k8s/gateway/: deployment.yaml
deploy/k8s/logic/: deployment.yaml
docs/api/: README.md
docs/architecture/: README.md
docs/database/: README.md
docs/deployment/: README.md
gateway/: CMakeLists.txt  main.cpp
gateway/config/: gateway_config.yaml
gateway/src/: gateway_server.cpp  gateway_server.h  http_server.cpp  http_server.h  tcp_server.cpp  tcp_server.h
gateway/test/: gateway_test.cpp
logic/: CMakeLists.txt  main.cpp
logic/config/: logic_config.yaml
logic/src/: chat_handler.cpp  chat_handler.h  message_processor.cpp  message_processor.h  sensitive_filter.cpp  sensitive_filter.h
logic/test/: logic_test.cpp
message/: CMakeLists.txt  main.cpp
message/config/: message_config.yaml
message/src/: message_sync.cpp  message_sync.h  mongo_storage.cpp  mongo_storage.h  mysql_index.cpp  mysql_index.h
message/src/dao/: msg_body_dao.cpp  msg_body_dao.h  msg_index_dao.cpp  msg_index_dao.h
message/src/model/: msg_model.h
message/src/service/: message_service.cpp  message_service.h
message/test/: message_test.cpp
proto/: CMakeLists.txt  chat.proto  common.proto  message.proto  user.proto
push/: CMakeLists.txt  main.cpp
push/config/: push_config.yaml
push/src/: apns_client.cpp  apns_client.h  fcm_client.cpp  fcm_client.h  push_manager.cpp  push_manager.h
push/test/: push_test.cpp
scripts/: gen_common.sh
tests/: CMakeLists.txt  config_manager_test.cpp
user/: CMakeLists.txt  main.cpp
user/config/: user_config.yaml
user/src/: auth_manager.cpp  auth_manager.h  friend_manager.cpp  friend_manager.h  token_manager.cpp  token_manager.h
user/src/dao/: friend_dao.cpp  friend_dao.h  user_dao.cpp  user_dao.h
user/src/model/: user_model.h
user/src/service/: auth_service.cpp  auth_service.h  friend_service.cpp  friend_service.h
user/test/: user_test.cpp
